source/components/app/app.scss
@import "../styles/color.palette";
@import "../styles/typography";
@import "../styles/responsive";

.app-banner {
    background-color: $primary-color;
    border-bottom: 0.2em solid $secondary-color;
}

article {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    width: 100%;
}

aside {
    width: 100%;
}

section {
    width: 100%;
}

.svg-container {
    height: 40em;
    width: 40em;
	vertical-align: middle; 
	overflow: hidden; 
}

.svg-content {
    height: 30em;
    width: 40em;
}

.app-font-headline {
    @include app-font-md;
    text-align: center;

    @include tablet {
        @include app-font-lg;
    }

    @include desktop {
        @include app-font-xl;
    }
}

.display-none {
    display: none;
}

.app-footer {
    border-top: 0.2em solid $primary-color;
    display: flex;
    height: 10em;
    justify-content: center;
    flex-direction: column;
    
    
    ul {
        width: 20em;
        height: 5em;
        margin: auto;
        list-style-type: none;
    }

    div {
        display: flex;
        small {
            width: 20em;
            height: 1em;
            margin-left: auto;
        }
    }
}

